[gd_scene load_steps=12 format=2]

[ext_resource path="res://UI/ShopUI/ShopUITheme.tres" type="Theme" id=1]
[ext_resource path="res://Fonts/BetterPixels.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Fonts/FontBetterPixels32.tres" type="DynamicFont" id=3]
[ext_resource path="res://UI/MainMenu/MainMenuUI.gd" type="Script" id=4]
[ext_resource path="res://Fonts/FontBetterPixels56.tres" type="DynamicFont" id=5]
[ext_resource path="res://UI/OptionsMenu/OptionMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://Actors/Enemy/EnemyKnightTexture.tres" type="Texture" id=7]
[ext_resource path="res://Actors/Player/PlayerHoodRed.tres" type="Texture" id=8]
[ext_resource path="res://Actors/Player/Sword.tres" type="Texture" id=9]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=5]
size = 128
outline_size = 2
font_data = ExtResource( 2 )

[node name="MainMenuUI" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 4 )

[node name="TextureRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.211765, 0.0862745, 0.0156863, 1 )

[node name="TextureRect2" type="TextureRect" parent="."]
anchor_left = 0.471875
anchor_top = 0.187833
anchor_right = 0.531875
anchor_bottom = 0.278833
margin_right = 26.0
margin_bottom = 40.0
texture = ExtResource( 7 )
expand = true
stretch_mode = 5

[node name="PlayerTexture" type="TextureRect" parent="."]
anchor_left = 0.865625
anchor_top = 0.40625
anchor_right = 0.865625
anchor_bottom = 0.40625
margin_left = -84.2453
margin_top = 22.9526
margin_right = -24.2452
margin_bottom = 82.9526
texture = ExtResource( 8 )
expand = true
stretch_mode = 5
flip_h = true

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -58.0
margin_right = 250.0
margin_bottom = 208.0
custom_styles/panel = SubResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_right = 500.0
margin_bottom = 266.0
theme = ExtResource( 1 )
custom_constants/margin_right = 64
custom_constants/margin_top = 64
custom_constants/margin_left = 64
custom_constants/margin_bottom = 64

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 64.0
margin_top = 64.0
margin_right = 435.0
margin_bottom = 202.0
custom_constants/separation = 20
alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer2"]
margin_right = 371.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer2/MarginContainer2"]
margin_right = 371.0
margin_bottom = 38.0
size_flags_horizontal = 7
size_flags_vertical = 7

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer2/MarginContainer2"]
margin_right = 371.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0.172549, 1, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "Play"
align = 1
valign = 1

[node name="MarginContainer3" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer2"]
margin_top = 58.0
margin_right = 371.0
margin_bottom = 88.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
custom_constants/margin_right = 32
custom_constants/margin_top = 0
custom_constants/margin_left = 32
custom_constants/margin_bottom = 0

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer2/MarginContainer3"]
margin_left = 32.0
margin_right = 339.0
margin_bottom = 30.0
size_flags_horizontal = 7
size_flags_vertical = 7

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer2/MarginContainer3"]
margin_left = 32.0
margin_right = 339.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = ExtResource( 3 )
text = "Options"
align = 1
valign = 1

[node name="MarginContainer4" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer2"]
margin_top = 108.0
margin_right = 371.0
margin_bottom = 138.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 64
custom_constants/margin_top = 0
custom_constants/margin_left = 64
custom_constants/margin_bottom = 0

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer2/MarginContainer4"]
margin_left = 64.0
margin_right = 307.0
margin_bottom = 30.0
size_flags_horizontal = 7
size_flags_vertical = 7

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer2/MarginContainer4"]
margin_left = 64.0
margin_right = 307.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = ExtResource( 3 )
text = "Quit"
align = 1
valign = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
margin_top = 40.0
margin_bottom = 177.0

[node name="Label" type="Label" parent="CenterContainer"]
margin_left = 20.0
margin_top = 17.0
margin_right = 620.0
margin_bottom = 119.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_colors/font_color = Color( 1, 0.6, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "Dungeon Like"
align = 1
valign = 1

[node name="OptionMenu" parent="." instance=ExtResource( 6 )]

[node name="TextureRect3" type="TextureRect" parent="."]
anchor_left = 0.0265625
anchor_top = 0.127083
anchor_right = 0.0265625
anchor_bottom = 0.127083
margin_left = 574.427
margin_top = 16.0956
margin_right = 614.427
margin_bottom = 56.0956
texture = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="TextureRect4" type="TextureRect" parent="."]
anchor_left = 0.914063
anchor_top = 0.127083
anchor_right = 0.914063
anchor_bottom = 0.127083
margin_left = -569.911
margin_top = 9.73801
margin_right = -529.911
margin_bottom = 49.738
texture = ExtResource( 9 )
expand = true
stretch_mode = 5
flip_h = true

[node name="Tween" type="Tween" parent="."]

[connection signal="mouse_entered" from="PanelContainer/MarginContainer/VBoxContainer2/MarginContainer2/Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/MarginContainer/VBoxContainer2/MarginContainer2/Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer2/MarginContainer2/Button" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer2/MarginContainer3/Button" to="." method="_on_OptionButton_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer2/MarginContainer4/Button" to="." method="_on_QuitButton_pressed"]
